# rei

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  mkdocs.yml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
docs/: index.md  reference.md
src/modern_python_boilerplate/: main.py
src/rei/: __init__.py  compressor.py  utils.py
src/rei/compression/: __init__.py  detector.py
tests/: test_main.py
