[project]
name = "rei"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    { name = "Victor Ohachor", email = "vohachor@gmail.com" },
]
maintainers = [
    { name = "Victor Ohachor", email = "vohachor@gmail.com" }
]
dependencies = []

[project.urls]
Homepage = ""
Documentation = ""
Repository = ""
Issues = ""

[dependency-groups]
dev = [
    "ruff",
    "pytest",
    "pytest-cov",
    "ty",
    "twine",
    "build",
    "pre-commit",
    "rich",
]

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[project.scripts]
rei = "rei.main:hello_world"

[tool.ruff]
target-version = "py313"

[tool.coverage.run]
omit = ["tests/*"]
